--- a/demo.html
+++ b/demo.html
@@ -46,6 +46,10 @@
   <script>
     $(function() {
         $('.lazy').lazyLoad();
+        
+        /*
+         * You can use change selector: $('img').lazyLoad();
+        */
     });
   </script>
 </body>
