showVisible now is self-executed and demo page fixed

--- a/demo/index.html
+++ b/demo/index.html
@@ -61,14 +61,6 @@
       </noscript>
     </figure>
     
-    <h2>Chaveiro abridor de garrafa</h2>
-    <figure>
-      <a href="http://eucompraria.com.br/produto/chave-chaveiro-abridor-de-garrafas"><img class="lazy-load" width="450" height="645" src="" data-src="http://andafter.org/media/blogs/eucompraria/shop/images/products/chaveiro_chave_abridor/chaveiro_chave_abridor/chaveiro_chave_abridor1.jpg" /></a>
-      <noscript>
-        <img  width="450" height="645 src="http://andafter.org/media/blogs/eucompraria/shop/images/products/chaveiro_chave_abridor/chaveiro_chave_abridor/chaveiro_chave_abridor1.jpg" />
-      </noscript>
-    </figure>
-    
     <h2>Headphone de caveira</h2>
     <figure>
       <a href="http://eucompraria.com.br/produto/fones-de-caveira"><img class="lazy-load" width="600" height="495" src="" data-src="http://andafter.org/media/blogs/eucompraria/shop/images/products/fone_caveira/fone_caveira_pb/fone_caveira1.jpg" /></a>
@@ -91,7 +83,7 @@
 
   </footer>
 
-  <script src="jquery-1.7.1.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script src="jquery.lazy-load-1.0.min.js"></script>
   <script>
     $(function() {
